# InsightAT

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  COORDINATE_DATABASE_FIX.md  DATABASE_FIX_FINAL_REPORT.md  DOCKER_BUILD.md  Dockerfile  Dockerfile.cuda12.8  IMAGEGROUP_IMPLEMENTATION.md  IMPLEMENTATION_PHASE2_P0_SUMMARY.md  LICENSE  README.md  README_zh.md  THIRD_PARTY_LICENSES.md  WORKFLOW_IMPLEMENTATION_REPORT.md  check_gpu_optimization.sh  compile-11.8-1060.sh  compile-12.8-1060.sh  compile-12.8.sh  compile-gui-only.sh  compile_appimage-11.8.sh  compile_appimage-12.8.sh  compile_appimage.sh  docker-build-cuda12.8.sh  docker-build.sh  docker-test.sh  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  Project.cpp  Project.h  ROTATION_UTILS_IMPLEMENTATION.md  accumulator_trait.hpp  base_log.cpp  base_log.h  blocks.h  common.h  common_global.h  data_sheet.cpp  data_sheet.h  db_types.cpp  db_types.h  exif.h  exif_IO.hpp  exif_IO_EasyExif.hpp  gps.cpp  gps.h  hash.h  indexed_sort.hpp  numeric.cpp  numeric.h  opengl_utils.h  pca.cpp  pca.h  rotation_utils.cpp  rotation_utils.h  string_utils.cpp  string_utils.h  task_queue.hpp  test_coord_trans.cpp  test_rotation_utils_basic.cpp  threading.cpp  threading.h  timer.cpp  timer.hpp
src/Gui/: AT3dRenderWidget.cpp  AT3dRenderWidget.h  AT3dRenderWidget.ui  ATConfigWidget.cpp  ATConfigWidget.h  ATConfigWidget.ui  ATParamWidget.cpp  ATParamWidget.h  ATParamWidget.ui  About.cpp  About.h  About.ui  AddPhotosDialog.cpp  AddPhotosDialog.h  AddPhotosDialog.ui  AdvanceAT.cpp  AdvanceAT.h  AdvanceAT.ui  CMakeLists.txt  CameraSelftAdjustWidget.cpp  CameraSelftAdjustWidget.h  CameraSelftAdjustWidget.ui  CheckImageWidget.cpp  CheckImageWidget.h  CheckImageWidget.ui  Document.cpp  Document.h  GPSPointsWizardDelegate.h  GPSPointsWizardDialog.cpp  GPSPointsWizardDialog.h  GPSPointsWizardDialog.ui  GPSPointsWizardModel.cpp  GPSPointsWizardModel.h  ImageAttributes.cpp  ImageAttributes.h  ImageAttributes.ui  ImportGPSDialog.cpp  ImportGPSDialog.h  InsightATGlobal.h  InsightMapper.cpp  (+44 more)
src/algorithm/: CMakeLists.txt  CameraEstimator.cpp
src/algorithm/export/: ColmapExporter.cpp  ColmapExporter.h
src/algorithm/io/: geopack.cpp  geopack.h  geopack_index.cpp  geopack_index.h  idc_reader.cpp  idc_reader.h  idc_writer.cpp  idc_writer.h  track_store_idc.cpp  track_store_idc.h
src/algorithm/tools/: cli_logging.cpp  cli_logging.h  export_project_json.cpp  isat_calibrate.cpp  isat_camera_estimator.cpp  isat_cpu_cascade_hashing_match.cpp  isat_extract.cpp  isat_extract.cpp.bak  isat_geo.cpp  isat_geo_cuda.cpp  isat_gpu_cascade_hashing_match.cpp  isat_incremental_sfm.cpp  isat_intrinsics.h  isat_match.cpp  isat_project.cpp  isat_retrieval_match.cpp  isat_retrieve.cpp  isat_seed_eval.cpp  isat_sfm.cpp  isat_tracks.cpp  isat_train_vlad.cpp  isat_train_vocab.cpp  isat_twoview.cpp  isat_undistort.cpp  pair_json_utils.h  project_loader.h  seed_eval_common.h  test_seed_eval_common.cpp
src/database/: CAMERA_MODEL_DESIGN.md  CAMERA_RIG_DESIGN.md  CMakeLists.txt  CameraSensorDatabase.cpp  CameraSensorDatabase.h  GCP_CENTRALIZED_DESIGN.md  PROJECT_STRUCTURE_DESIGN.md  README.md  camera_sensor_database.cpp  camera_sensor_database.h  database_types.cpp  database_types.h  test_project_serialization.cpp  test_serialization.cpp  test_serialization_comprehensive.cpp
src/pipeline/: __init__.py  project_utils.py  runner.py  sfm.py
src/pipeline/pipelines/: __init__.py  auto_calibrate.py  sfm.py
src/pipeline/tools/: __init__.py  visualize_vlad_retrieval.py
src/render/: CMakeLists.txt  bundler_loader.cpp  bundler_loader.h  colmap_loader.cpp  colmap_loader.h  opengl_mat.h  render.h  render.vcxproj  render.vcxproj.filters  render_camera.cpp  render_camera.h  render_context.h  render_global.h  render_glutils.cpp  render_glutils.h  render_grid_tile.cpp  render_grid_tile.h  render_layer.cpp  render_layer.h  render_layer_manage.cpp  render_layer_manage.h  render_map2.cpp  render_map2.h  render_node.cpp  render_node.h  render_object.cpp  render_object.h  render_pan_tool.cpp  render_pan_tool.h  render_pivot.cpp  render_pivot.h  render_rotation_tool.cpp  render_rotation_tool.h  render_simple_objects.cpp  render_simple_objects.h  render_tool.h  render_tracks.cpp  render_tracks.h  render_types.cpp  render_types.h  (+4 more)
src/render/tests/: CMakeLists.txt  test_opengl_mat_property.cpp
src/tools/at_bundler_viewer/: CMakeLists.txt  bundler_viewer_window.cpp  bundler_viewer_window.h  egl_render_widget.cpp  egl_render_widget.h  feature_overlay_layer.cpp  feature_overlay_layer.h  main.cpp  observation_image_view.cpp  observation_image_view.h  observation_list_widget.cpp  observation_list_widget.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  UISystemConfig.cpp  UISystemConfig.h  app_settings.cpp  app_settings.h  main_window.cpp  main_window.h  system_config.cpp  system_config.h
src/ui/dialogs/: CoordinateSystemConfigDialog.cpp  CoordinateSystemConfigDialog.h  ImageEditorDialog.cpp  ImageEditorDialog.h  ImageGroupDetailPanel.cpp  ImageGroupDetailPanel.h  ImageGroupDialog.cpp  ImageGroupDialog.h  ImagePreviewDialog.cpp  ImagePreviewDialog.h  NewATTaskDialog.cpp  NewATTaskDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  ProjectCoordinateDialog.cpp  ProjectCoordinateDialog.h  ProjectInfoDialog.cpp  ProjectInfoDialog.h  coordinate_system_config_dialog.cpp  coordinate_system_config_dialog.h  first_launch_dialog.cpp  first_launch_dialog.h  image_editor_dialog.cpp  image_editor_dialog.h  image_group_detail_panel.cpp  image_group_detail_panel.h  image_group_dialog.cpp  image_group_dialog.h  image_preview_dialog.cpp  image_preview_dialog.h  new_at_task_dialog.cpp  new_at_task_dialog.h  new_project_dialog.cpp  new_project_dialog.h  project_info_dialog.cpp  project_info_dialog.h
src/ui/models/: ProjectDocument.cpp  ProjectDocument.h  WorkspaceTreeModel.cpp  WorkspaceTreeModel.h  project_document.cpp  (+3 more)
src/util/: CMakeLists.txt  insight_global.h  numeric.cpp  numeric.h  string_utils.cpp  string_utils.h
(+384 files in other folders)
